# dirswitch-experiments-tmlr2025

./: .gitignore  README.md  compute_network_statistics.py  environment_cpu_full.yml  environment_cpu_slim.yml  environment_cuda_full.yml  environment_cuda_slim.yml  index_datasets.py  pyproject.toml
data/incloud/ogb_arxiv/: metadata.yml
data/incloud/ogb_arxiv_year/: metadata.yml
data/inrepo/cocite/: cocite.npz  (+2 more)
experiments/: common.py  dispersal_analysis.py  network_alignment.py  node_classification.py  reachability_statistical_distance_analysis.py
reachnes-tmlr2025/: .gitignore  LICENSE  README.md  debug_rw.py  pyproject.toml  requirements_cpu.txt  requirements_cuda.txt  run.py  tox.ini
reachnes-tmlr2025/datasets/: arenas_clean.edgelist  telegram.npz  usairport.edgelist
reachnes-tmlr2025/src/reachnes/: adj_utils.py  betainc.py  coeffs.py  ew_filtering.py  reachability.py  reachnes.py  reachnes_random_walks.py  reduction.py  run_reachnes.py  source_star_graph.py  utils.py
reachnes-tmlr2025/tests/: alignment.py  conftest.py  test_adj_utils.py  test_betainc.py  test_coeffs.py  test_filtering.py  test_reachability.py  test_reachnes.py  test_reachnes_rw.py  test_reduction.py  test_source_star_graph.py  utils.py
reachnes-tmlr2025/torch-sprsvd/: demo.py  pyproject.toml
reachnes-tmlr2025/torch-sprsvd/src/torch_sprsvd/: core.py  sprsvd.py
reachnes-tmlr2025/torch-sprsvd/tests/: benchmark.py  test_block_sprsvd.py  test_halko_sprsvd.py  test_rsvd.py  utils.py
scripts/: run_dirswirch_proximity_experiments.sh  run_dirswitch_message_passing_experiments.sh  run_dispersal_experiments.sh  run_graph_alignment_experiments.sh  run_hp_tuning.sh  run_pokec_investigation.sh  run_proximity_node_classification_benchmark.sh  run_ssgnn_experiment.sh
src/nebtools/: argsfromconfig.py  data2embeddings.py  utils.py
structfeatures/: pyproject.toml
structfeatures/src/structfeatures/: __init__.py  core.py  core_f32.py  core_f64.py  features.py  main.py
(+132 files in other folders)
