[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nebtools"
version = "0.0.1"
authors = [
  { name="Ciwan Ceylan", email="ciwan@kth.se" },
]
description = "A library for benchmarking DirSwitch and other unsupervised and self-supervised node embedding algorithms."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ciwanceylan/dirswitch-experiments-tmlr2025"
Issues = "https://github.com/ciwanceylan/dirswitch-experiments-tmlr2025/issues"