[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "structfeatures"
version = "0.0.1"
authors = [
  { name="Ciwan Ceylan", email="ciwan@kth.se" },
]
description = "A package for computing structural node features of graphs.."
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
